<resources>
    <string name="app_name">Reptiles</string>
    <string name="principalTitleString">CATEGORIAS DE REPTILES</string>

    <!-- Activity 2 resources -->
    <string name="firstPrincipalButtonString">Crocodilia</string>
    <string name="secondPrincipalButtonString">Squamata</string>
    <string name="thirdPrincipalButtonString">Testudines</string>
    <string name="fourthPrincipalButtonString">Rincocéfalos</string>



    <!-- Activity 2 resources -->
    <string name="title_activity_2">CLASIFICACIÓN: </string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="barTab">hola</string>

</resources>